--- a/index.html
+++ b/index.html
@@ -117,12 +117,13 @@
     loadInventory();
 
     setInterval(() => {
-    fetch("/inventory");
-  }, 600000); // 600,000 ms = 10 minutes
+      fetch("/ping");
+    }, 600000);
   </script>
 </body>
 
 </html>
+
 
 
 
