--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Seal of Solara</title>
  <style>
-   body { font-family: Arial, sans-serif; background: #111; color: #eee; text-align: center; }
+ body { font-family: Arial, sans-serif; background: #111; color: #eee; text-align: center; }
   img { width: 420px; height: 315px; border: 2px solid #444; align-items: center;margin-bottom: 8px; opacity: 1; transition: opacity 0.6s ease-in-out; }
   button { margin: 3px; padding: 4px 8px; font-size: 12px; cursor: pointer; }
   #message { font-size: 14px; margin: 6px; color: #ffd700; min-height: 20px; }
@@ -16,11 +16,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
-  max-width: 800px; /* Optional: cap width for large screens */
+  max-width: 800px;
   margin: auto;
   padding: 0 12px;
   box-sizing: border-box;
+  height: auto;
+  max-height: 100vh;
+  overflow-y: auto;
 }
 
 /* Scene image scales naturally */
@@ -117,6 +121,7 @@
 </head>
 <body>
   <h1>Seal of Solara</h1>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
 	 <div id="scene-wrapper">
   <img id="scene" src="/static/assets/forest.png" alt="Scene Image">
   <div id="message">Welcome, adventurer.</div>
@@ -223,6 +228,7 @@
 </body>
 
 </html>
+
 
 
 
